changed aspect-ratio to fix issue on Safari on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ header a{
     background-size: 100%;
     border: 0;
     height: 9%;
-    aspect-ratio: 1;
+    width: 18%;
     top: 1%;
     right: 2%;
     z-index: 9999;
